<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="top"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/torch_provider"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="top"
        android:gravity="center"
        />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/open_torch"
        android:onClick="openTorch"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/txt_size"
        android:text="@string/to_open_torch_infinite"
        android:padding="@dimen/txt_padding"
        />

    <Button
        android:id="@+id/btnStart_waitFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Wait for ..."
        android:onClick="waitFor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/txt_size"
        android:text="@string/wait_for_example"
        android:padding="@dimen/txt_padding"
        />

    <Button
        android:id="@+id/btnStart_repeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/flash"
        android:onClick="repeatFlash"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/txt_size"
        android:text="@string/repeat_example"
        android:padding="@dimen/txt_padding"
        />


</androidx.appcompat.widget.LinearLayoutCompat>